Fix checkbox lists layout issues #151

--- a/src/app/open-absences/components/open-absences-detail/open-absences-detail.component.scss
+++ b/src/app/open-absences/components/open-absences-detail/open-absences-detail.component.scss
@@ -25,7 +25,7 @@
 }
 
 .absence-all {
-  padding: $spacer 0;
+  padding: $spacer;
   border-bottom: 1px solid $gray-200;
   display: grid;
   grid-template-areas: "checkbox all";
@@ -33,7 +33,7 @@
 }
 
 .absence-entry {
-  padding: 1em 0;
+  padding: $spacer;
   border-bottom: 1px solid $gray-200;
   display: grid;
   grid-template-areas:
@@ -43,13 +43,15 @@
 }
 
 .checkbox {
-  padding: 0.2rem 0.75rem 0 1rem;
+  padding: 0.2rem $spacer/2 0 0;
   grid-area: checkbox;
 }
 
 .checkbox input.form-check-input {
-  position: static;
-  margin: 0;
+  // Make the following statements !important since the are
+  // overwritten in Evento as such
+  position: static !important;
+  margin: 0 !important;
 }
 
 .all {
