--- a/src/app/open-absences/components/open-absences-list/open-absences-list.component.scss
+++ b/src/app/open-absences/components/open-absences-list/open-absences-list.component.scss
@@ -18,16 +18,16 @@
 
 .absence-header {
   cursor: pointer;
-  padding: $spacer 0;
+  padding: $spacer;
   display: grid;
-  grid-template-areas: "checkbox name date";
-  grid-template-columns: 1rem 5fr 1fr;
+  grid-template-areas: "name date";
+  grid-template-columns: 5fr 1fr;
   border-top: 1px solid $gray-300;
   border-bottom: 2px solid $gray-300;
 }
 
 .absence-entry {
-  padding: 1em 0;
+  padding: $spacer;
   border-bottom: 1px solid $gray-200;
   display: grid;
   grid-template-areas: "checkbox name study-class lessons-count days-ago date";
@@ -35,13 +35,15 @@
 }
 
 .checkbox {
-  padding: 0.2rem 0.75rem 0 1rem;
+  padding: 0.2rem $spacer/2 0 0;
   grid-area: checkbox;
 }
 
 .checkbox input.form-check-input {
-  position: static;
-  margin: 0;
+  // Make the following statements !important since the are
+  // overwritten in Evento as such
+  position: static !important;
+  margin: 0 !important;
 }
 
 .name {
@@ -84,8 +86,8 @@
   }
 
   .absence-header {
-    grid-template-areas: "checkbox name date";
-    grid-template-columns: 1rem 3fr 2fr;
+    grid-template-areas: "name date";
+    grid-template-columns: 3fr 2fr;
   }
 
   .absence-entry {
